adding cons fav icons and theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color='primary'>
   <a mat-button routerLink="/home">
-    <h1>LemonMart</h1>
+    <mat-icon svgIcon="lemon"></mat-icon>
+    <a mat-button routerLink="/Home">
+      <h1>LemonMart</h1>
+    </a>
   </a>
 </mat-toolbar>
 <router-outlet></router-outlet>
