--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 <mat-toolbar color='primary'>
+  <button mat-icon-button>
+    <mat-icon>menu</mat-icon>
+  </button>
   <a mat-button routerLink="/home">
     <mat-icon svgIcon="lemon"></mat-icon>
     <a mat-button routerLink="/Home">
       <h1>LemonMart</h1>
     </a>
   </a>
+  <span class="flex-spacer"></span>
+  <button mat-icon-button>
+    <mat-icon>account_circle</mat-icon>
+  </button>
+  <button mat-icon-button>
+    <mat-icon>lock_open</mat-icon>
+  </button>
 </mat-toolbar>
 <router-outlet></router-outlet>
