--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div fxLayout="column" fxLayoutAlign="center center">
+  <span class="mat-display-2">Hello, Limoncu!</span>
+  <button mat-raised-button coloer="primary">login</button>
+</div>
