adding child router outlet and child manager components, child manager module with import of materials.module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="center center">
   <span class="mat-display-2">Hello, Limoncu!</span>
-  <button mat-raised-button coloer="primary">login</button>
+  <button routerLink="/manager" mat-raised-button coloer="primary">login as manager
+  </button>
 </div>
