--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
-<mat-toolbar color='primary'>
+<mat-toolbar fxLayoutGap="8px" color='primary'>
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
   <a mat-button routerLink="/home">
     <mat-icon svgIcon="lemon"></mat-icon>
-    <a mat-button routerLink="/Home">
-      <h1>LemonMart</h1>
-    </a>
+    <span class="mat-h2">LemonMart</span>
+
   </a>
   <span class="flex-spacer"></span>
-  <button mat-icon-button>
+  <button mat-mini-fab routerLink="/user/profile" matTooltip="Profile"
+    matTooltipShowDelay="1000" matTooltipHideDelay="2000" aria-label="User Profile">
     <mat-icon>account_circle</mat-icon>
   </button>
-  <button mat-icon-button>
+  <button mat-mini-fab routerLink="/user/logout" matTooltip="Logout"
+    aria-label="User Logout" matTooltipShowDelay="1000" matTooltipHideDelay="2000"
+    aria-label="User Profile">
     <mat-icon>lock_open</mat-icon>
   </button>
 </mat-toolbar>
