--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
 html,
 body {
   height: 100%;
@@ -18,4 +18,7 @@ body {
 
 .flex-spacer {
   flex: 1 1 auto;
+}
+mat-tooltip-component .mat-tooltip.tooltip {
+  color: blue !important;
 }
