--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,9 +1,21 @@
-<mat-toolbar color='accent'>
+<mat-toolbar color="warn" fxLayoutGap="8px">
   <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
     Manager Dashboard</a>
   <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
     User Managment</a>
   <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
     Receipt Lookup</a>
+
+  <span class="flex-spacer"></span>
+
+  <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
+    aria-label="Inventory">
+    <mat-icon>List</mat-icon>
+  </button>
+
+  <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria-label="POS">
+    <mat-icon>shopping_cart</mat-icon>
+  </button>
+
 </mat-toolbar>
 <router-outlet></router-outlet>
