adding a left navigation menu to manager

--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -6,3 +6,8 @@ div[fixLayout] {
   font-weight: bold;
   border-bottom: 2px solid #005005;
 }
+
+.active {
+  color: #673ab7;
+  font-weight: bold !important;
+}
