--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="warn" fxLayoutGap="8px">
+<!-- <mat-toolbar color="warn" fxLayoutGap="8px">
   <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
     Manager Dashboard</a>
   <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
@@ -18,4 +18,47 @@
   </button>
 
 </mat-toolbar>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<div class="container" fxLayout="row" fxLayoutAlign="start start">
+
+
+  <div class="nav-sidebar" fxFlex="230px">
+    <mat-nav-list>
+      <mat-list-item *ngFor="let item of listItems" (click)="handleClick(item)">
+        <mat-icon matListIcon>home</mat-icon>
+        <a [routerLink]="item.link" routerLinkActive="active" matLine>
+          {{item.linkTitle}}
+        </a>
+      </mat-list-item>
+    </mat-nav-list>
+  </div>
+
+
+  <div class="main-content" fxFlex>
+    <mat-toolbar color="warn" fxLayoutGap="8px">
+      <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
+        Manager Dashboard</a>
+      <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
+        User Managment</a>
+      <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
+        Receipt Lookup</a>
+
+      <span class="flex-spacer"></span>
+
+      <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
+        aria-label="Inventory">
+        <mat-icon>List</mat-icon>
+      </button>
+
+      <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria-label="POS">
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+
+  </div>
+
+
+</div>
