Improve menu add icons more flex

--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -7,7 +7,18 @@ div[fixLayout] {
   border-bottom: 2px solid #005005;
 }
 
+.mat-toolbar.mat-primary {
+  background: #007bff;
+  color: #fff;
+}
+
+.back-sidebar {
+  background: #007bff;
+  color: #fff;
+}
+
 .active {
   color: #673ab7;
   font-weight: bold !important;
+  border-bottom: 2px solid #005005;
 }
