--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,32 +1,10 @@
-<!-- <mat-toolbar color="warn" fxLayoutGap="8px">
-  <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
-    Manager Dashboard</a>
-  <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
-    User Managment</a>
-  <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
-    Receipt Lookup</a>
-
-  <span class="flex-spacer"></span>
-
-  <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
-    aria-label="Inventory">
-    <mat-icon>List</mat-icon>
-  </button>
-
-  <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria-label="POS">
-    <mat-icon>shopping_cart</mat-icon>
-  </button>
-
-</mat-toolbar>
-<router-outlet></router-outlet> -->
-
-<div class="container" fxLayout="row" fxLayoutAlign="start start">
+<div class="container" fxLayout="row" fxFlex="100%" fxLayoutAlign="start start">
 
 
-  <div class="nav-sidebar" fxFlex="230px">
+  <div class="nav-sidebar back-sidebar" fxLayout="column" fxFlexFill fxFlex="200px">
     <mat-nav-list>
       <mat-list-item *ngFor="let item of listItems" (click)="handleClick(item)">
-        <mat-icon matListIcon>home</mat-icon>
+        <mat-icon matListIcon>{{item.icon}}</mat-icon>
         <a [routerLink]="item.link" routerLinkActive="active" matLine>
           {{item.linkTitle}}
         </a>
@@ -35,8 +13,8 @@
   </div>
 
 
-  <div class="main-content" fxFlex>
-    <mat-toolbar color="warn" fxLayoutGap="8px">
+  <div class="main-content" fxFlex fxLayout="column">
+    <mat-toolbar class='mat-primary' fxLayoutGap="8px">
       <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
         Manager Dashboard</a>
       <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
