get login for manager button working with in mem auth provider

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="center center">
   <span class="mat-display-2">Hello, Limoncu!</span>
-  <button routerLink="/manager" mat-raised-button coloer="primary">login as manager
+  <!-- <button routerLink="/manager" mat-raised-button coloer="primary">login as manager -->
+  <button (click)="login()" mat-raised-button color="primary">login as manager
   </button>
 </div>
