--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -14,7 +14,7 @@
 
 
   <div class="main-content" fxFlex fxLayout="column">
-    <mat-toolbar class='mat-primary' fxLayoutGap="8px">
+    <mat-toolbar fxLayoutGap="8px">
       <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
         Manager Dashboard</a>
       <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
