--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,26 @@
-<mat-toolbar>
-  <span>LOGIN</span>
-</mat-toolbar>
-<mat-card class="my-card">
-  <mat-card-content>
-    <form [formGroup]='loginForm' class="my-form">
-      <mat-form-field class="full-width">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" name="email">
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <mat-label>Password</mat-label>
-        <input matInput placeholder="Password" name="password">
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
-  </mat-card-actions>
-</mat-card>
+<div fxLayout="row" fxLayoutAlign="center">
+
+  <mat-card fxFlex="400px">
+    <mat-card-header>
+      <mat-card-title>
+        <div class="mat-headline">Hello, Limoncu!</div>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]='loginForm' (ngSubmit)="login(loginForm)">
+        <mat-form-field class="full-width">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Email" name="email">
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Password</mat-label>
+          <input matInput placeholder="Password" name="password">
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
+    </mat-card-actions>
+  </mat-card>
+
+</div>
