--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,19 +8,56 @@
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]='loginForm' (ngSubmit)="login(loginForm)">
-        <mat-form-field class="full-width">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" name="email">
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" name="password">
-        </mat-form-field>
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+          <mat-icon>email</mat-icon>
+          <mat-form-field fxFlex>
+            <input matInput placeholder="Email" aria-label="E-mail" name="email">
+
+            <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+              Email is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
+              Email is not valid
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+          <mat-icon matPrefix>vpn_key</mat-icon>
+          <mat-form-field fxFlex>
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="Password" aria-label="Password" name="password">
+            <mat-hint>Minimum 8 characteers</mat-hint>
+
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+              Password is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
+              Password minimum is 8 characters
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
+              Password minimum is 8 characters
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('maxlength')">
+              Password maximum is 50 characters
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row" class="margin-top">
+          <div *ngIf="loginError" class="mat-caption error{{loginError}}">
+            <div class="flex-spacer"></div>
+            <button mat-raised-button type="submit" color="primary"
+              [disabled]="loginForm.invalid">
+              Login
+            </button>
+
+          </div>
+        </div>
       </form>
     </mat-card-content>
-    <mat-card-actions>
+    <!-- <mat-card-actions>
       <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
-    </mat-card-actions>
+    </mat-card-actions> -->
   </mat-card>
 
 </div>
