--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<mat-toolbar fxLayoutGap="8px" color='primary'>
+<mat-toolbar *ngIf="{status: authService.authStatus$ | async,
+  user: authService.currentUser$ | async
+} as auth;
+" fxLayoutGap="8px" color='primary'>
+
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
 
@@ -9,10 +13,12 @@
 
   </a>
   <span class="flex-spacer"></span>
-  <button mat-mini-fab routerLink="/user/profile" matTooltip="Profile"
-    matTooltipShowDelay="1000" matTooltipHideDelay="2000" aria-label="User Profile">
+  <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/profile"
+    matTooltip="Profile" matTooltipShowDelay="1000" matTooltipHideDelay="2000"
+    aria-label="User Profile">
     <mat-icon>account_circle</mat-icon>
   </button>
+  <img *ngIf="auth?.user?.picture" class="image-cropper" [src]="auth?.user?.picture" />
   <button mat-mini-fab routerLink="/user/logout" matTooltip="Logout"
     aria-label="User Logout" matTooltipShowDelay="1000" matTooltipHideDelay="2000"
     aria-label="User Profile">
