--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,12 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form [formGroup]='loginForm' (ngSubmit)="login(loginForm)">
+      <form [formGroup]='loginForm'>
         <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
           <mat-icon>email</mat-icon>
           <mat-form-field fxFlex>
-            <input matInput placeholder="Email" aria-label="E-mail" name="email">
+            <input matInput placeholder="Email" formControlName="email"
+              aria-label="E-mail" name="email">
 
             <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
               Email is required
@@ -26,7 +27,8 @@
           <mat-icon matPrefix>vpn_key</mat-icon>
           <mat-form-field fxFlex>
             <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" aria-label="Password" name="password">
+            <input matInput formControlName="password" placeholder="Password"
+              aria-label="Password" name="password">
             <mat-hint>Minimum 8 characteers</mat-hint>
 
             <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
@@ -55,9 +57,10 @@
         </div>
       </form>
     </mat-card-content>
-    <!-- <mat-card-actions>
-      <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
-    </mat-card-actions> -->
+    <mat-card-actions>
+      <button mat-raised-button (click)="login(loginForm)" [disabled]="loginForm.invalid"
+        type="submit" color="primary">LOGIN</button>
+    </mat-card-actions>
   </mat-card>
 
 </div>
