--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<mat-toolbar *ngIf="{status: authService.authStatus$ | async,
+<mat-toolbar *ngIf='{ status: authService.authStatus$ | async,
   user: authService.currentUser$ | async
-} as auth;
-" fxLayoutGap="8px" color='primary'>
+} as auth;' fxLayoutGap=" 8px" color="primary">
 
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
 
   </button>
   <a mat-button routerLink="/home">
-    <mat-icon svgIcon="lemon"></mat-icon>
+    <mat-icon svgIcon="lemon">
+    </mat-icon>
     <span class="mat-h2">LemonMart</span>
 
   </a>
@@ -18,10 +18,12 @@
     aria-label="User Profile">
     <mat-icon>account_circle</mat-icon>
   </button>
-  <img *ngIf="auth?.user?.picture" class="image-cropper" [src]="auth?.user?.picture" />
-  <button mat-mini-fab routerLink="/user/logout" matTooltip="Logout"
-    aria-label="User Logout" matTooltipShowDelay="1000" matTooltipHideDelay="2000"
-    aria-label="User Profile">
+  <img *ngIf="auth?.user?.picture && auth?.status?.isAuthenticated" class="image-cropper"
+    [src]="auth?.user?.picture" />
+
+  <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/logout"
+    matTooltip="Logout" aria-label="User Logout" matTooltipShowDelay="1000"
+    matTooltipHideDelay="2000" aria-label="User Profile">
     <mat-icon>lock_open</mat-icon>
   </button>
 </mat-toolbar>
