--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,42 +1,11 @@
-<div class="container" fxLayout="row" fxFlex="100%" fxLayoutAlign="start start">
+<mat-toolbar color='accent' fxLayoutGap="8px">
+  <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
+    Management Dashboard</a>
+  <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
+    Users Management</a>
+  <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
+    Receipts Look Up</a>
 
 
-  <div class="nav-sidebar back-sidebar" fxLayout="column" fxFlexFill fxFlex="200px">
-    <mat-nav-list>
-      <mat-list-item *ngFor="let item of listItems" (click)="handleClick(item)">
-        <mat-icon matListIcon>{{item.icon}}</mat-icon>
-        <a [routerLink]="item.link" routerLinkActive="active" matLine>
-          {{item.linkTitle}}
-        </a>
-      </mat-list-item>
-    </mat-nav-list>
-  </div>
-
-
-  <div class="main-content" fxFlex fxLayout="column">
-    <mat-toolbar fxLayoutGap="8px">
-      <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
-        Manager Dashboard</a>
-      <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
-        User Managment</a>
-      <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
-        Receipt Lookup</a>
-
-      <span class="flex-spacer"></span>
-
-      <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
-        aria-label="Inventory">
-        <mat-icon>List</mat-icon>
-      </button>
-
-      <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria-label="POS">
-        <mat-icon>shopping_cart</mat-icon>
-      </button>
-
-    </mat-toolbar>
-    <router-outlet></router-outlet>
-
-  </div>
-
-
-</div>
+</mat-toolbar>
+<router-outlet></router-outlet>
