working on menu stacking tool bar items on mobile

--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -1,23 +1,13 @@
-div[fixLayout] {
-  /* selects all element with fixLayout attribute */
-  margin-top: 32px;
-}
 .active-link {
   font-weight: bold;
   border-bottom: 2px solid #005005;
 }
-
-.mat-toolbar.mat-primary {
-  background: #007bff;
-  color: #fff;
+.fill-remaining-space {
+  /*This fills the remaining space, by using flexbox.
+ Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
 }
-
-.back-sidebar {
-  color: #fff;
-}
-
-.active {
-  color: #673ab7;
-  font-weight: bold !important;
-  border-bottom: 2px solid #005005;
+.my-nav-list {
+  display: flex;
+  flex-direction: row;
 }
