--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -1,31 +1,21 @@
 <mat-nav-list>
-
-
   <h3 matSubHeader>Manager</h3>
   <a mat-list-item routerLinkActive="active-link" routerLink="/manager/users">
-    users
+    Users
   </a>
-
   <a mat-list-item routerLinkActive="active-link" routerLink="/manager/receipts">
     Receipts
   </a>
-
   <h3 matSubHeader>Inventory</h3>
-
-  <a mat-list-item routerLinkActive="active-link" routerLink="/inventory/stockEntry">
+  <a mat-list-item routerLinkActive="active-link" routerLink="/inventory/stock-entry">
     Stock Entry
   </a>
-  <a mat-list-item routerLinkActive="active-link"
-    routerLink="/manager/inventory/Products">
+  <a mat-list-item routerLinkActive="active-link" routerLink="/inventory/products">
     Products
   </a>
-  <a mat-list-item routerLinkActive="active-link"
-    routerLink="/manager/inventory/Categories">
+  <a mat-list-item routerLinkActive="active-link" routerLink="/inventory/categories">
     Categories
   </a>
   <h3 matSubHeader>Clerk</h3>
-
-  <a mat-list-item routerLinkActive="active-link" routerLink="/pos">
-    POS
-  </a>
+  <a mat-list-item routerLinkActive="active-link" routerLink="/pos">POS</a>
 </mat-nav-list>
