--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,36 @@
-// prettier-ignore
-`
-<mat-toolbar *ngIf='{ status: authService.authStatus$ | async,
-  user: authService.currentUser$ | async
-} as auth;' fxLayoutGap=" 8px" color="primary">
-
-  <button mat-icon-button>
-    <mat-icon>menu</mat-icon>
-
-  </button>
-  <a mat-button routerLink="/home">
-    <mat-icon svgIcon="lemon">
-    </mat-icon>
-    <span class="mat-h2">LemonMart</span>
-
-  </a>
-  <span class="flex-spacer"></span>
-  <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/profile"
-    matTooltip="Profile" matTooltipShowDelay="1000" matTooltipHideDelay="2000"
-    aria-label="User Profile">
-    <mat-icon>account_circle</mat-icon>
-  </button>
-  <img *ngIf="auth?.user?.picture && auth?.status?.isAuthenticated" class="image-cropper"
-    [src]="auth?.user?.picture" />
-
-  <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/logout"
-    matTooltip="Logout" aria-label="User Logout" matTooltipShowDelay="1000"
-    matTooltipHideDelay="2000" aria-label="User Profile">
-    <mat-icon>lock_open</mat-icon>
-  </button>
-</mat-toolbar>
-<mat-sidenav-container class="app-sidenav-container">
-  <mat-sidenav #sidenav [mode]="media.isActive('xs') ? 'over' : 'side'"
-    [fixedInViewport]="media.isActive('xs')" fixedTopGap="56" [(opened)]="opened">
-    <app-navigation-menu></app-navigation-menu>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="app-container">
+  <mat-toolbar color="primary" fxLayoutGap="8px" class="app-toolbar"
+    [class.app-is-mobile]="media.isActive('xs')" *ngIf="{
+      status: authService.authStatus$ | async,
+      user: authService.currentUser$ | async
+    } as auth;">
+    <button *ngIf="auth?.status?.isAuthenticated" mat-icon-button
+      (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <a mat-icon-button routerLink="/home">
+      <mat-icon svgIcon="lemon"></mat-icon>
+      <span class="mat-h2">LemonMart</span>
+    </a>
+    <span class="flex-spacer"></span>
+    <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/profile"
+      matTooltip="Profile" aria-label="User Profile">
+      <img *ngIf="auth?.user?.picture" class="image-cropper"
+        [src]="auth?.user?.picture" />
+      <mat-icon *ngIf="!auth?.user?.picture">account_circle</mat-icon>
+    </button>
+    <button *ngIf="auth?.status?.isAuthenticated" mat-mini-fab routerLink="/user/logout"
+      matTooltip="Logout" aria-label="Logout">
+      <mat-icon>lock_open</mat-icon>
+    </button>
+  </mat-toolbar>
+  <mat-sidenav-container class="app-sidenav-container">
+    <mat-sidenav #sidenav [mode]="media.isActive('xs') ? 'over' : 'side'"
+      [fixedInViewport]="media.isActive('xs')" _ fixedTopGap="56" [(opened)]="opened">
+      <app-navigation-menu></app-navigation-menu>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
