--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,11 +1,17 @@
-<mat-toolbar color='accent' fxLayoutGap="8px">
-  <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
-    Management Dashboard</a>
-  <a mat-button routerLink="/manager/users" routerLinkActive="active-link">
-    Users Management</a>
-  <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
-    Receipts Look Up</a>
-
-
+<mat-toolbar color="accent" fxLayoutGap="8px">
+  <a mat-button routerLink="/manager/home" routerLinkActive="active-link">Manager's
+    Dashboard</a>
+  <a mat-button routerLink="/manager/users" routerLinkActive="active-link">User
+    Management</a>
+  <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">Receipt
+    Lookup</a>
+  <span class="flex-spacer"></span>
+  <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
+    aria-label="Inventory">
+    <mat-icon>list</mat-icon>
+  </button>
+  <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria- label="POS">
+    <mat-icon>shopping_cart</mat-icon>
+  </button>
 </mat-toolbar>
 <router-outlet></router-outlet>
