--- a/src/app/navigation-menu/navigation-menu.component.css
+++ b/src/app/navigation-menu/navigation-menu.component.css
@@ -1,4 +1,11 @@
 .active-link {
   font-weight: bold;
   border-left: 6px solid green;
+  background-color: rgb(0, 255, 255);
+}
+.active-link:visited {
+  background-color: yellow;
+}
+.active-link:hover {
+  background-color: yellow;
 }
