--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -2,12 +2,7 @@
   font-weight: bold;
   border-bottom: 2px solid #005005;
 }
-.fill-remaining-space {
-  /*This fills the remaining space, by using flexbox.
- Every toolbar row uses a flexbox row layout. */
-  flex: 1 1 auto;
-}
-.my-nav-list {
-  display: flex;
-  flex-direction: row;
+
+div[fxLayout] {
+  margin-top: 32px;
 }
