--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,10 +1,14 @@
-<mat-toolbar color="accent" fxLayoutGap="8px">
-  <a mat-button routerLink="/manager/home" routerLinkActive="active-link">Manager's
-    Dashboard</a>
-  <a mat-button routerLink="/manager/users" routerLinkActive="active-link">User
-    Management</a>
-  <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">Receipt
-    Lookup</a>
+<mat-toolbar color="accent" fxLayoutGap="1px" style="height: auto;" fxLayout="row wrap"
+  fxLayoutAlign="center center">
+  <div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap
+    fxLayoutGap="0.5%" fxLayoutAlign="center">
+    <a mat-button routerLink="/manager/home" routerLinkActive="active-link">Manager's
+      Dashboard</a>
+    <a mat-button routerLink="/manager/users" routerLinkActive="active-link">User
+      Management</a>
+    <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">Receipt
+      Lookup</a>
+  </div>
   <span class="flex-spacer"></span>
   <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory"
     aria-label="Inventory">
@@ -13,5 +17,6 @@
   <button mat-mini-fab routerLink="/pos" matTooltip="POS" aria- label="POS">
     <mat-icon>shopping_cart</mat-icon>
   </button>
+
 </mat-toolbar>
 <router-outlet></router-outlet>
